--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,12 +1,6 @@
 name: "CodeQL"
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  schedule:
-    - cron: '45 23 * * 6'
+on: [push, pull_request]
 
 jobs:
   analyze:
